Perma /builds/worker/checkouts/gecko/dom/media/mediasink/AudioDecoderInputTrack.cpp:216:14: error: unused variable 'rv' [-Werror,-Wunused-variable] when Gecko 90 merges to Beta on 2021-05-31
Categories
(Core :: Audio/Video: MediaStreamGraph, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox88 | --- | unaffected |
| firefox89 | --- | unaffected |
| firefox90 | blocking | verified |
People
(Reporter: imoraru, Assigned: alwu)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Central as beta simulation: https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=5a10c123be15fa9704b7df4a2647fae9f6df9c90&selectedTaskRun=Ccm8G7nJRvWLSTsNjxDXFg.0
How to run this simulation: https://wiki.mozilla.org/Sheriffing/How_To/Beta_simulations#TRUNK_AS_EARLY_BETA
Failure log: https://treeherder.mozilla.org/logviewer?job_id=338149607&repo=try&lineNumber=9947
[task 2021-04-29T12:24:25.617Z] 12:24:25 ERROR - /builds/worker/checkouts/gecko/dom/media/mediasink/AudioDecoderInputTrack.cpp:216:14: error: unused variable 'rv' [-Werror,-Wunused-variable]
[task 2021-04-29T12:24:25.617Z] 12:24:25 INFO - const bool rv = mSPSCQueue.Enqueue(data);
[task 2021-04-29T12:24:25.617Z] 12:24:25 INFO - ^
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
Depends on D113822
Updated•4 years ago
|
Comment 3•4 years ago
|
||
| bugherder | ||
Comment 4•4 years ago
|
||
Verified fixed in today's central-as-early-beta simulation.
Updated•4 years ago
|
Updated•4 years ago
|
Description
•