Bug 1708433 - add 'unused' for the result used for assertion. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D113823