dom/media/mediasink/AudioDecoderInputTrack.cpp
@@ -216,6 +216,7 @@ void AudioDecoderInputTrack::PushDataToSPSCQueue(SPSCData& data) {
   AssertOnDecoderThread();
   const bool rv = mSPSCQueue.Enqueue(data);
   MOZ_DIAGNOSTIC_ASSERT(rv, "Failed to push data, SPSC queue is full!");
+  Unused << rv;
 }
 
 void AudioDecoderInputTrack::SetVolume(float aVolume) {
